# Changes to be committed: #	new file:   .vscode/settings.json #	modified:   Departments.html #	modified:   Directory.html #	deleted:    public_html/About Us.html #	deleted:    public_html/Adolf.jpg #	deleted:    public_html/Departments.html #	deleted:    public_html/Directory.html #	deleted:    public_html/Home.html #	deleted:    public_html/STS.jpg #	deleted:    public_html/SecAuth.html #	deleted:    public_html/checkPasskey.php #	deleted:    public_html/index.html #	deleted:    public_html/nein.html #	deleted:    public_html/script_button-verify.js #	deleted:    public_html/script_button.js #	deleted:    public_html/script_nein.js #	deleted:    public_html/script_ver_nein.js #	deleted:    public_html/styles_about.css #	deleted:    public_html/styles_button.css #	deleted:    public_html/styles_dep.css #	deleted:    public_html/styles_index.css #	deleted:    public_html/verify_captcha.php #

--- a/Departments.html
+++ b/Departments.html
@@ -47,7 +47,7 @@
         main {
             flex: 1;
             padding: 20px;
-            max-width: 1000px;
+            max-width: 800px;
             margin: auto;
         }
 
@@ -62,32 +62,30 @@
             margin-bottom: 15px;
         }
 
-        /* Responsive table wrapper */
         .table-container {
-            overflow-x: auto;
             margin-top: 15px;
             border: 1px solid #ccc;
             border-radius: 6px;
             background: #fff;
             box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            overflow-x: auto;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            min-width: 800px; /* ensures proper spacing */
         }
 
         th, td {
             border: 1px solid #ccc;
-            padding: 10px;
-            text-align: center;
-            white-space: nowrap; /* keeps text tidy */
+            padding: 12px;
+            text-align: left;
         }
 
         th {
             background-color: #4CAF50;
             color: white;
+            width: 30%;
         }
 
         tr:nth-child(even) {
@@ -95,19 +93,7 @@
         }
 
         tr:hover {
-            background-color: #e8f5e9; /* subtle highlight on hover */
-        }
-
-        a {
-            text-decoration: none;
-            color: #4CAF50;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-
-        a:hover {
-            color: #2e7d32;
-            text-decoration: underline;
+            background-color: #e8f5e9;
         }
 
         footer {
@@ -138,32 +124,48 @@
             <div class="table-container">
                 <table>
                     <tr>
-                        <th>Subject/Department</th>
-                        <td>Physics</td>
-                        <td>Chemistry</td> 
-                        <td>Biology</td> 
-                        <td>Mathematics</td>
-                        <td>English Lit. & Lang.</td>
-                        <td>Geography</td>
-                        <td>History & Civics</td> 
-                        <td>P.E./Games</td>
-                        <td>SUPW</td>
-                        <td>Computer Science</td>
-                        <td>Languages</td>
+                        <th>Physics</th>
+                        <td>Mr. Bishal Saha</td>
                     </tr>
                     <tr>
-                        <th>Subject Teacher</th>
-                        <td>Mr. Bishal Saha</td>
+                        <th>Chemistry</th>
                         <td>Mr. Soumajeet Sarkar</td>
+                    </tr>
+                    <tr>
+                        <th>Biology</th>
                         <td>Mr. Pijush Mazumdar</td>
+                    </tr>
+                    <tr>
+                        <th>Mathematics</th>
                         <td>Mr. Bishal Saha</td>
+                    </tr>
+                    <tr>
+                        <th>English Lit. & Lang.</th>
                         <td>Mrs. Soumi Nath</td>
+                    </tr>
+                    <tr>
+                        <th>Geography</th>
                         <td>Mrs. Emily Ghosh</td>
-                        <td>Mrs. Vibha Das</td> 
+                    </tr>
+                    <tr>
+                        <th>History & Civics</th>
+                        <td>Mrs. Vibha Das</td>
+                    </tr>
+                    <tr>
+                        <th>P.E./Games</th>
                         <td>Mr. Prakash</td>
+                    </tr>
+                    <tr>
+                        <th>SUPW</th>
                         <td>Mr. Sonimesh Baskey</td>
+                    </tr>
+                    <tr>
+                        <th>Computer Science</th>
                         <td>Mr. Soumajeet Sarkar</td>
-                        <td>Mrs. Shreya Chandra<br>Mrs. Ferdous Ara Begam</td> 
+                    </tr>
+                    <tr>
+                        <th>Languages</th>
+                        <td>Mrs. Shreya Chandra<br>Mrs. Ferdous Ara Begam</td>
                     </tr>
                 </table>
             </div>
