--- a/index.html
+++ b/index.html
@@ -138,5 +138,8 @@
       }
     }
   </script>
+  <script src="script_button-verify.js"></script>
+  <script src="script_button.js"></script>
 </body>
 </html>
+
