--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
   <div class="captchaBox" id="captchaBox">
     <input type="password" id="passkeyInput" placeholder="Enter Passkey">
-    <button class="btn" id="passkeyBtn" onclick="checkPasskey()">Use Passkey</button>
+    <button class="btn" id="passkeyBtn">Use Passkey</button>
     <button class="btn" id="myButton" type="button" disabled onclick="window.location.href='Directory.html';">
       Open Link
     </button>
@@ -118,28 +118,8 @@
     <p>© 2025 Made by The Rope Garage Co. All rights reserved.</p>
   </footer>
 
-  <script>
-    function checkPasskey() {
-      const passkeyInput = document.getElementById("passkeyInput");
-      const captchaBox = document.getElementById("captchaBox");
-      const openButton = document.getElementById("myButton");
-
-      const correctPasskey = "12345";
-
-      // Reset classes
-      captchaBox.classList.remove("glow-success", "glow-error", "shake");
-
-      if (passkeyInput.value === correctPasskey) {
-        captchaBox.classList.add("glow-success");
-        openButton.disabled = false;
-      } else {
-        captchaBox.classList.add("glow-error", "shake");
-        openButton.disabled = true;
-      }
-    }
-  </script>
+  <!-- External JS -->
+  <script src="script_button.js"></script>
   <script src="script_button-verify.js"></script>
 </body>
 </html>
-
-
