--- a/Directory.html
+++ b/Directory.html
@@ -112,7 +112,7 @@
       <a href="Home.html" target="contentFrame">🏠 Home</a>
       <a href="About Us.html" target="contentFrame">ℹ️ About Us</a>
       <a href="Departments.html" target="contentFrame">📚 Departments</a>
-      <a href="#" target="Contact.html">Contact Us</a>
+      <a href="Contact.html" target="contentFrame">📞 Contact Us</a>
     </div>
     <iframe name="contentFrame" class="content" src="Home.html"></iframe>
   </div>
@@ -128,4 +128,5 @@
   </script>
 </body>
 </html>
+
 
