--- a/Directory.html
+++ b/Directory.html
@@ -114,7 +114,7 @@
       <a href="Departments.html" target="contentFrame">📚 Departments</a>
       <a href="WIP.html" target="contentFrame">📞 Contact Us (W.I.P.)</a>
       <a href="LICENSE" target="contentFrame">License</a>
-      <a href="https://github.com/biswasasit14-max/Ivory-Goat" target="contentFrame">Source Repository</a>
+      <a href="README.md" target="contentFrame">Source Repository</a>
     </div>
     <iframe name="contentFrame" class="content" src="Home.html"></iframe>
   </div>
@@ -130,6 +130,7 @@
   </script>
 </body>
 </html>
+
 
 
 
