--- a/Directory.html
+++ b/Directory.html
@@ -113,8 +113,8 @@
       <a href="About Us.html" target="contentFrame">ℹ️ About Us</a>
       <a href="Departments.html" target="contentFrame">📚 Departments</a>
       <a href="WIP.html" target="contentFrame">📞 Contact Us (W.I.P.)</a>
-      <a href="LICENSE" target="contentFrame">License</a>
-      <a href="README.md" target="contentFrame">Source Repository</a>
+      <a href="LICENSE.html" target="contentFrame">📜 License</a>
+      <a href="README.html" target="contentFrame">📖 Source</a>
     </div>
     <iframe name="contentFrame" class="content" src="Home.html"></iframe>
   </div>
@@ -130,6 +130,7 @@
   </script>
 </body>
 </html>
+
 
 
 
