--- a/Home.html
+++ b/Home.html
@@ -138,10 +138,10 @@
     </p>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Admissions</a>
-        <a href="#">Contact</a>
+        <a href="About Us.html">About</a>
+        <a href="Departments.html">Departments</a>
+        <a href="WIP.html">Contact Us</a>
+        <a href="LICENSE.html">License</a>
     </nav>
 
     <main>
@@ -164,3 +164,4 @@
     </footer>
 </body>
 </html>
+
