--- a/About Us.html
+++ b/About Us.html
@@ -8,7 +8,7 @@
     <!-- Internal CSS -->
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
@@ -20,16 +20,17 @@
         }
 
         header {
-            background-color: #4CAF50;
+            background: linear-gradient(135deg, #4CAF50, #2e7d32);
             color: white;
-            padding: 20px;
+            padding: 25px;
             text-align: center;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.25);
         }
 
         header h1 {
             margin: 0;
-            font-size: 2em;
+            font-size: 2.2em;
+            letter-spacing: 1px;
         }
 
         hr {
@@ -40,30 +41,40 @@
 
         img {
             border-radius: 50%;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-            margin-top: 15px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            margin-top: 20px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        img:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 16px rgba(0,0,0,0.4);
         }
 
         main {
             flex: 1;
-            padding: 20px;
+            padding: 30px;
             max-width: 900px;
             margin: auto;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
 
         section {
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
         h2 {
             color: #4CAF50;
             border-bottom: 2px solid #4CAF50;
-            padding-bottom: 5px;
-            margin-bottom: 15px;
+            padding-bottom: 8px;
+            margin-bottom: 20px;
+            font-size: 1.6em;
         }
 
         p {
-            font-size: 1.05em;
+            font-size: 1.1em;
             text-align: justify;
         }
 
@@ -86,6 +97,26 @@
         a:hover {
             color: #2e7d32;
             text-decoration: underline;
+        }
+
+        /* Back Button Styling */
+        .back-btn {
+            display: inline-block;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 18px;
+            border-radius: 6px;
+            font-size: 1em;
+            font-weight: bold;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            margin: 20px 0;
+        }
+
+        .back-btn:hover {
+            background-color: #2e7d32;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            transform: translateY(-2px);
         }
 
         footer {
@@ -111,59 +142,9 @@
         <img src="STS.jpg" alt="St. Teresa's School Berhampore" width="125" height="125">
     </p>
     <main>
+        <!-- Back Button -->
+        <a href="Home.html" class="back-btn">← Back</a>
+
         <section>
             <h2>About the School</h2>
-            <p><b>St Teresa's School, Berhampore, a Catholic English Medium Educational Institution for boys and girls, 
-                owned by Teresian Carmelite Sisters, was established in 2015. 
-                It is registered under the Societies Registration Act XXI of 1860 with Registration No 80 in the year 1975-76 having its office in Asansol, West Bengal. 
-                It is a minority institution but provision is also made for the admission of children irrespective of caste and creed. 
-                The Teresian Carmelites are working in India and abroad through educational centres, orphanages and other charitable and promotional works.</b>
-            </p>
-        </section>
-        <section>
-            <h2>History</h2>
-            <p><b>St. Teresa's School was founded in 2015 by the Teresian Carmelite Sisters with the aim of providing quality education to children in Berhampore and surrounding areas. 
-                Over the years, the school has grown in size and reputation, becoming a trusted institution for academic excellence and holistic development.</b>
-            </p>
-        </section>
-        <section>
-            <h2>Aims & Objectives</h2>
-            <b>
-                <ul>
-                    <li>Impart sound value-based education</li>
-                    <li>Form habits of piety, virtue, discipline and self-reliance</li>
-                    <li>Guide students to be dutiful and useful citizens of India</li>
-                    <li>Form sound spiritual, moral, social and physical outlook</li>
-                    <li>Method of education based on principles of conviction, loving kindness and faith in God</li>
-                    <li>Seek to form the young into men and women of character, competence, conscience, compassion and commitment to foster uprightness in public life</li>
-                    <li>Instill sense of honesty, right judgement, generosity, sincerity and respect for others</li>
-                    <li>Steer love for nature and other aesthetic values</li>
-                </ul>
-            </b>
-        </section>
-        <section>
-            <h2>Mission & Vision</h2>
-            <b>
-                <ul>
-                    <li>To provide holistic education that nurtures the intellectual, emotional, social, and spiritual growth of students.</li>
-                    <li>To foster a supportive and inclusive learning environment that encourages creativity, critical thinking, and lifelong learning.</li>
-                    <li>To instill strong moral values and a sense of social responsibility in students, preparing them to be compassionate and ethical leaders in society.</li>
-                    <li>To promote cultural awareness and global citizenship among students, encouraging them to appreciate diversity and contribute positively to the world.</li>
-                </ul>
-            </b>
-        </section>
-        <section>
-            <h2>Address and Contact</h2>
-            <p><b>
-                Berhampore, Panchanantala, Boaliadanga. PO Murshidabad District, West Bengal 742102<br>
-                Website: www.stteresaberhampore.in<br>
-                Mobile: 9932974647<br>
-                Email: stspanchantala24ctc@gmail.com
-            </b></p>
-        </section>
-    </main>
-    <footer>
-        <p style="text-align: center">&copy; 2015 St. Teresa's School. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+            <p><b>St Teresa's School, Berhampore, a Catholic English Medium Educational
