--- a/Departments.html
+++ b/Departments.html
@@ -96,6 +96,26 @@
             background-color: #e8f5e9;
         }
 
+        /* Back Button Styling */
+        .back-btn {
+            display: inline-block;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 18px;
+            border-radius: 6px;
+            font-size: 1em;
+            font-weight: bold;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            margin-bottom: 20px;
+        }
+
+        .back-btn:hover {
+            background-color: #2e7d32;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            transform: translateY(-2px);
+        }
+
         footer {
             background-color: #222;
             color: #ccc;
@@ -119,6 +139,9 @@
         <img src="STS.jpg" alt="St. Teresa's School Berhampore" width="125" height="125">
     </p>
     <main>
+        <!-- Back Button -->
+        <a href="Home.html" class="back-btn">← Back</a>
+
         <section>
             <h2>Our Departments</h2>
             <div class="table-container">
