--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Authentication Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
     @keyframes shake {
       0%, 100% { transform: translateX(0); }
@@ -12,11 +16,8 @@
       60% { transform: translateX(-6px); }
       80% { transform: translateX(6px); }
     }
-    .shake {
-      animation: shake 0.4s;
-    }
+    .shake { animation: shake 0.4s; }
 
-    /* Glow animations with fade out */
     @keyframes glowSuccess {
       0%   { box-shadow: 0 0 12px 4px rgba(76,175,80,0.8); border-color: #4CAF50; }
       70%  { box-shadow: 0 0 12px 4px rgba(76,175,80,0.4); }
@@ -27,13 +28,8 @@
       70%  { box-shadow: 0 0 12px 4px rgba(244,67,54,0.4); }
       100% { box-shadow: none; border-color: #aaa; }
     }
-
-    .glow-success {
-      animation: glowSuccess 2s ease-out forwards;
-    }
-    .glow-error {
-      animation: glowError 2s ease-out forwards;
-    }
+    .glow-success { animation: glowSuccess 2s ease-out forwards; }
+    .glow-error { animation: glowError 2s ease-out forwards; }
 
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -66,16 +62,37 @@
       transition: box-shadow 0.4s ease;
     }
 
-    input[type="password"] {
-      padding: 10px;
-      width: 100%;
-      border-radius: 6px;
+    /* Input with icon */
+    .input-group {
+      display: flex;
+      align-items: center;
       border: 1px solid #aaa;
-      margin-top: 10px;
+      border-radius: 6px;
+      padding: 8px 10px;
+      margin-top: 12px;
+      background: #fdfdfd;
+      transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    }
+    .input-group:focus-within {
+      border-color: #4CAF50;
+      box-shadow: 0 0 6px rgba(76,175,80,0.4);
+    }
+    .input-group i {
+      color: #888;
+      margin-right: 8px;
+      font-size: 1.1em;
+    }
+    .input-group input {
+      border: none;
+      outline: none;
+      flex: 1;
+      font-size: 1em;
+      padding: 8px;
+      background: transparent;
     }
 
     .btn {
-      margin-top: 12px;
+      margin-top: 14px;
       padding: 10px 18px;
       background: #4CAF50;
       color: white;
@@ -84,6 +101,7 @@
       cursor: pointer;
       transition: background-color 0.3s ease, transform 0.2s ease;
       font-weight: 500;
+      width: 100%;
     }
     .btn:hover { background: #45a049; transform: scale(1.05); }
     .btn:active { background: #3e8e41; transform: scale(0.98); }
@@ -100,7 +118,7 @@
       box-shadow: 0 -2px 4px rgba(0,0,0,0.2);
     }
     footer p { margin: 0; }
-</style>
+  </style>
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -108,12 +126,17 @@
   <h1>Authentication Portal</h1>
 
   <div class="captchaBox" id="captchaBox">
-    <input type="password" id="passkeyInput" placeholder="Enter Passkey">
-    <button class="btn" id="passkeyBtn">Use Passkey</button>
+    <!-- Input with lock icon -->
+    <div class="input-group">
+      <i class="fas fa-lock"></i>
+      <input type="password" id="passkeyInput" placeholder="Enter Passkey">
+    </div>
+
+    <button class="btn" id="passkeyBtn"><i class="fas fa-key"></i> Use Passkey</button>
 
     <!-- Open Link button starts disabled -->
     <button class="btn" id="myButton" type="button" disabled>
-      Open Link
+      <i class="fas fa-link"></i> Open Link
     </button>
   </div>
 
