--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     h1 {
       font-family: monospace;
-      background-color: #4CAF50;
+      background: linear-gradient(135deg, #4CAF50, #2e7d32);
       color: white;
       padding: 20px;
       margin: 0;
@@ -53,12 +53,12 @@
 
     .captchaBox {
       margin: 40px auto;
-      padding: 20px;
+      padding: 25px;
       width: 360px;
       background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-      border: 1px solid #aaa;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      border: 1px solid #ddd;
       transition: box-shadow 0.4s ease;
     }
 
@@ -67,20 +67,20 @@
       display: flex;
       align-items: center;
       border: 1px solid #aaa;
-      border-radius: 6px;
-      padding: 8px 10px;
-      margin-top: 12px;
+      border-radius: 8px;
+      padding: 10px 12px;
+      margin-top: 14px;
       background: #fdfdfd;
       transition: border-color 0.3s ease, box-shadow 0.3s ease;
     }
     .input-group:focus-within {
       border-color: #4CAF50;
-      box-shadow: 0 0 6px rgba(76,175,80,0.4);
+      box-shadow: 0 0 8px rgba(76,175,80,0.4);
     }
     .input-group i {
-      color: #888;
-      margin-right: 8px;
-      font-size: 1.1em;
+      color: #4CAF50;
+      margin-right: 10px;
+      font-size: 1.2em;
     }
     .input-group input {
       border: none;
@@ -91,21 +91,38 @@
       background: transparent;
     }
 
+    /* Buttons */
     .btn {
-      margin-top: 14px;
-      padding: 10px 18px;
-      background: #4CAF50;
+      margin-top: 16px;
+      padding: 12px 20px;
+      background: linear-gradient(135deg, #4CAF50, #2e7d32);
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      font-weight: 500;
+      transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+      font-weight: 600;
       width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      font-size: 1em;
     }
-    .btn:hover { background: #45a049; transform: scale(1.05); }
-    .btn:active { background: #3e8e41; transform: scale(0.98); }
-    .btn:disabled { background: #aaa; cursor: not-allowed; }
+    .btn:hover {
+      background: linear-gradient(135deg, #45a049, #1b5e20);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+    }
+    .btn:active {
+      background: #3e8e41;
+      transform: scale(0.98);
+    }
+    .btn:disabled {
+      background: #aaa;
+      cursor: not-allowed;
+      box-shadow: none;
+    }
 
     footer {
       background-color: #222;
