--- a/About Us.html
+++ b/About Us.html
@@ -61,6 +61,11 @@
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
 
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
         section {
             margin-bottom: 40px;
         }
@@ -201,3 +206,4 @@
     </footer>
 </body>
 </html>
+
