--- a/Departments.html
+++ b/Departments.html
@@ -51,6 +51,11 @@
             margin: auto;
         }
 
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
         section {
             margin-bottom: 30px;
         }
@@ -199,3 +204,4 @@
     </footer>        
 </body>
 </html>
+
