--- a/index.html
+++ b/index.html
@@ -119,17 +119,20 @@
   <div class="captchaBox" id="captchaBox">
     <!-- Input with lock icon -->
     <div class="input-group">
-      <i class="fas fa-lock"></i>
-      <input type="password" id="passkeyInput" placeholder="Enter Passkey">
+      <i class="fas fa-lock" aria-hidden="true"></i>
+      <input type="password" id="passkeyInput" placeholder="Enter Passkey" aria-label="Passkey">
     </div>
 
     <!-- Buttons -->
-    <button class="btn" id="passkeyBtn"><i class="fas fa-key"></i> Use Passkey</button>
-    
-    <button class="btn" id="myButton" type="button" disabled>
-      <i class="fas fa-link"></i> Open Link
+    <button class="btn" id="passkeyBtn" type="button">
+      <i class="fas fa-key" aria-hidden="true"></i> Use Passkey
     </button>
-    
+
+    <button class="btn" id="myButton" type="button" disabled>
+      <i class="fas fa-link" aria-hidden="true"></i> Open Link
+    </button>
+  </div>
+
   <footer>
     <p>© 2025 Made by The Rope Garage Co. All rights reserved.</p>
   </footer>
@@ -138,5 +141,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
