--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Authentication Portal</title>
+  <title>Secure Access Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Secure authentication portal for access. Enter your passkey to continue.">
 
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -38,6 +39,9 @@
       background-color: #f9f9f9;
       color: #333;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     h1 {
@@ -49,6 +53,13 @@
       font-size: 2em;
       box-shadow: 0 2px 4px rgba(0,0,0,0.2);
       border-bottom: 3px solid #45a049;
+    }
+
+    main {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .captchaBox {
@@ -117,44 +128,57 @@
       transform: scale(0.98);
     }
     .btn:disabled {
-      background: #aaa;
+      background: #ccc;
       cursor: not-allowed;
       box-shadow: none;
+      color: #666;
     }
 
     footer {
       background-color: #222;
-      color: #ccc;
+      color: #ddd;
       padding: 15px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
       font-size: 0.9em;
       box-shadow: 0 -2px 4px rgba(0,0,0,0.2);
+      margin-top: auto;
     }
     footer p { margin: 0; }
+
+    @media (max-width: 420px) {
+      .captchaBox {
+        width: 90%;
+        padding: 20px;
+      }
+    }
+
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0,0,0,0);
+      border: 0;
+    }
   </style>
 </head>
 <body>
-  <h1>Authentication Portal</h1>
+  <h1>Secure Access Portal</h1>
 
-  <div class="captchaBox" id="captchaBox">
-    <div class="input-group">
-      <i class="fas fa-lock"></i>
-      <input type="password" id="passkeyInput" placeholder="Enter Passkey">
+  <main>
+    <div class="captchaBox" id="captchaBox">
+      <div class="input-group">
+        <label for="passkeyInput" class="sr-only">Passkey</label>
+        <i class="fas fa-lock"></i>
+        <input type="password" id="passkeyInput" placeholder="Enter Passkey" autocomplete="off" aria-describedby="statusMessage">
+      </div>
+
+      <button class="btn" id="passkeyBtn"><i class="fas fa-key"></i> Verify Passkey </button>
+
+      <button class="btn" id="myButton" type="button" disabled>
+        <i class="fas fa-link"></i> Proceed
+      </button>
+
+      <div id="statusMessage" aria-live="polite"></div>
     </div>
-
-    <button class="btn" id="passkeyBtn"><i class="fas fa-key"></i> Use Passkey</button>
-
-    <button class="btn" id="myButton" type="button" disabled>
-      <i class="fas fa-link"></i> Open Link
-    </button>
-  </div>
-
-  <footer>
-    <p>© 2025 Made by The Rope Garage Co. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
