--- a/index.html
+++ b/index.html
@@ -93,3 +93,70 @@
     .btn {
       margin-top: 16px;
       padding: 12px 20px;
+      background: linear-gradient(135deg, #4CAF50, #2e7d32);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+      font-weight: 600;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      font-size: 1em;
+    }
+    .btn:hover {
+      background: linear-gradient(135deg, #45a049, #1b5e20);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+    }
+    .btn:active {
+      background: #3e8e41;
+      transform: scale(0.98);
+    }
+    .btn:disabled {
+      background: #aaa;
+      cursor: not-allowed;
+      box-shadow: none;
+    }
+
+    footer {
+      background-color: #222;
+      color: #ccc;
+      padding: 15px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      font-size: 0.9em;
+      box-shadow: 0 -2px 4px rgba(0,0,0,0.2);
+    }
+    footer p { margin: 0; }
+  </style>
+</head>
+<body>
+  <h1>Authentication Portal</h1>
+
+  <div class="captchaBox" id="captchaBox">
+    <div class="input-group">
+      <i class="fas fa-lock"></i>
+      <input type="password" id="passkeyInput" placeholder="Enter Passkey">
+    </div>
+
+    <button class="btn" id="passkeyBtn">
+      <i class="fas fa-key"></i> Submit
+    </button>
+
+    <button class="btn" id="myButton" type="button" disabled>
+      <i class="fas fa-link"></i> Continue
+    </button>
+  </div>
+
+  <footer>
+    <p>© 2025 Made by The Rope Garage Co. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
