--- a/form.html
+++ b/form.html
@@ -4,7 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Basic Details Form</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    /* style.css */
+.result-box {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #0078d7;
+}
+
+.copy-btn {
+  margin-top: 10px;
+  padding: 6px 12px;
+  background: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.copy-btn:hover {
+  background: #218838;
+}
+
+  </style>
 </head>
 <body>
   <div class="form-container">
